# anki-dict

./: .gitignore  demo.html  install.ps1  pyproject.toml
src/anki_dict/: __init__.py  consult_dict.py
